# adme-ingestion-tool

./: .git-commit-msg.txt  .gitignore  .mcp.json  LICENSE  README.md  alembic.ini  apm.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.squad/: .first-run  _archive_decisions.ps1  backlog.md  ceremonies.md  decisions-archive.md  decisions.md  routing.md  team.md  test-planning-summary-issue6.txt  test-planning-summary.txt
.squad/casting/: history.json  policy.json  registry.json
.squad/decisions/: decisions.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-04-24T12-22-14Z-scribe-session.md  2026-04-24T12-38-18Z-issue-2-design-test.md  2026-04-24T12-38-18Z-issue-2-final-completion.md  2026-04-24T12-38-18Z-kevin-contract-fix.md  2026-04-24T13-37-20Z-issue-3-final-completion.md  2026-04-24T17-54-00Z-issue-4-full-completion.md  2026-04-25-issue5-complete-batch.md  2026-04-25-issue7-complete-batch.md  2026-05-06T06-44-31-pr9-storage-comparison.md  2026-05-06T15-30-00Z-hire-darryl.md
.squad/orchestration-log/: 2026-04-24T12-22-14Z-satya.md  2026-04-24T12-38-18Z-charlie-final-review.md  2026-04-24T12-38-18Z-charlie.md  2026-04-24T12-38-18Z-judson.md  2026-04-24T12-38-18Z-kevin-implementation.md  2026-04-24T12-38-18Z-kevin.md  2026-04-24T12-38-18Z-satya.md  2026-04-24T13-37-20Z-charlie-issue3-review.md  (+23 more)
.streamlit/: config.toml
app/: __init__.py  connection_state.py  main.py  storage_bridge.py
scripts/: generate_tno_master_data.py
tests/: conftest.py  test_auth.py  test_auth_service.py  test_bulk_load_page.py  test_bulk_loader_service.py  test_connection_model.py  test_connection_state.py  test_entitlements_page.py  test_entitlements_service.py  test_file_upload_page.py  test_files_service.py  test_health.py  test_health_service.py  test_history_page.py  test_ingestion_page.py  test_ingestion_service.py  test_legal_tags_page.py  test_legal_tags_service.py  test_main.py  test_manifest_generator.py  test_osdu_models.py  test_run_history_service.py  test_search_page.py  test_search_service.py  test_settings_page.py  test_settings_store.py  test_settings_store_keyring.py  test_smoke.py  test_storage_bridge.py  test_storage_config.py  test_storage_contract.py  test_storage_repositories.py  test_streamlit_import_paths.py  test_tno_vendor.py  test_token_utils.py  test_verification_service.py
(+119 files in other folders)
