[project]
name = "adme-ingestion-tool"
version = "0.1.0"
description = "Operator control plane for Azure Data Manager for Energy (ADME)"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.56.0",
    "azure-identity>=1.19.0",
    "msal>=1.31.0",
    "requests>=2.32.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.15.0",
    "mypy>=1.15.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
# Vendored from Azure/osdu-data-load-tno under Apache-2.0; do not lint
extend-exclude = ["app/vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/pages/1_⚙️_Instance_Configuration.py" = ["N999"]
"app/pages/2_🔑_Entitlements.py" = ["N999"]
"app/pages/3_🏷️_Legal_Tags.py" = ["N999"]
"app/pages/4_📥_Ingest.py" = ["N999"]
"app/pages/5_📄_Manifest.py" = ["N999"]
"app/pages/6_📂_File.py" = ["N999"]
"app/pages/7_🔍_Search.py" = ["N999"]
"app/pages/9_📥_Bulk_Load.py" = ["N999"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Vendored from Azure/osdu-data-load-tno under Apache-2.0; do not type-check
[[tool.mypy.overrides]]
module = "app.vendor.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
